# DaVinci

./: .gitignore  LICENSE  README.md
DaVinciHub/: README.md  build.gradle  settings.gradle
DaVinciHub/app/: build.gradle
DaVinciHub/app/src/androidTest/java/com/daVinci/hub/: SplashActivityTest.java  ViewDimmerDataActivityTest.java  ViewPlugDataActivityTest.java  ViewTemperatureDataActivityTest.java
DaVinciHub/app/src/main/: AndroidManifest.xml
DaVinciHub/app/src/main/java/com/daVinci/hub/: GrpcClient.java  MainActivity.java  SplashActivity.java  ViewDimmerDataActivity.java  ViewPlugDataActivity.java  ViewTemperatureDataActivity.java
DaVinciHub/app/src/main/java/com/daVinci/hub/util/: LineChartTimeAxisValueFormatter.java  SensorRecyclerViewAdapter.java
DaVinciHub/app/src/main/proto/: davinci.proto
DaVinciHub/app/src/main/res/drawable/: green_circle.xml
DaVinciHub/app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_viewdimmerdata.xml  activity_viewplugdata.xml  activity_viewtemperaturedata.xml  sensor_item_row.xml
DaVinciHub/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
DaVinciHub/app/src/test/java/com/daVinci/hub/: GrpcClientTest.java  SplashActivityTest.java  ViewDimmerDataActivityTest.java  ViewPlugDataActivityTest.java  ViewTemperatureDataActivityTest.java
DaVinciHub/app/src/test/java/com/daVinci/hub/util/: LineChartTimeAxisValueFormatterTest.java  SensorRecyclerViewAdapterTest.java
DaVinciHub/gradle/: libs.versions.toml
DaVinciRuntime/: CMakeLists.txt  README.md  build.sh  davinci.db  runTests.txt  stubCmakeLists.txt
DaVinciRuntime/config/: config.json
DaVinciRuntime/include/: config.h  database.h  davinci_server.h  mqtt_client.h
DaVinciRuntime/include/util/: JSONProcessor.h  JSONProcessorFactory.h  ShellyPlusDimmerData.h  ShellyPlusDimmerNotificationProcessor.h  ShellyPlusDimmerProcessor.h  ShellyPlusPlugData.h  ShellyPlusPlugNotificationProcessor.h  ShellyPlusPlugProcessor.h  ShellyPlusTemperatureData.h  ShellyPlusTemperatureNotificationProcessor.h  ShellyPlusTemperatureProcessor.h  buffers.h  encrypter.h  json_processor.h  sensor_types.h
DaVinciRuntime/proto/: davinci.proto  test.proto
DaVinciRuntime/src/: config.cpp  database.cpp  davinci_server.cpp  grpc_server.cpp  main.cpp  mqtt_client.cpp
DaVinciRuntime/src/util/: JSONProcessorFactory.cpp  ShellyPlusDimmerData.cpp  ShellyPlusDimmerNotificationProcessor.cpp  ShellyPlusPlugData.cpp  ShellyPlusPlugNotificationProcessor.cpp  ShellyPlusPlugProcessor.cpp  ShellyPlusTemperatureData.cpp  ShellyPlusTemperatureNotificationProcessor.cpp  buffers.cpp
DaVinciRuntime/test/: brokerTest.py  connectToBrokerFailTest.py  connectToBrokerTest.py  databaseTest.py  davinci_pb2.py  davinci_pb2_grpc.py  grpcServiceTest.py  placeHolder_gRPCUnitTest.txt  runAllPy.py  sensorTest.py  sensorTest_connection.py  sensorTest_wrongTopics.py  testGRPC.py  test_JSONProcessorFactory.cpp  test_ShellyPlusDimmerData.cpp  test_ShellyPlusDimmerNotificationProcessor.cpp  test_ShellyPlusPlugData.cpp  test_ShellyPlusPlugNotificationProcessor.cpp  test_ShellyPlusTemperatureData.cpp  test_ShellyPlusTemperatureNotificationProcessor.cpp  test_config.cpp  test_database.cpp  test_davinci_server.cpp  test_json.cpp  test_mqtt_client.cpp
DaVinciRuntime/tests/: brokerTest.py  placeHolder_gRPCAcceptanceTest.txt  placeHolder_mqttClientAcceptanceTest.txt  placeHolder_mqttClientUnitTest.txt  sensorTest.py  test_JSONProcessorFactory.cpp  test_config.cpp  test_mqtt_client.cpp
Scripts/: daVinciRuntimeGetLogs.sh  daVinciRuntimeRestart.sh  daVinciRuntimeStart.sh  daVinciRuntimeStatus.sh  daVinciRuntimeStop.sh  hivePortCheck.sh  hiveStart.sh  hiveStatus.sh
